syntax = "proto3";

import "AbilityEmbryo.proto";

option java_package = "org.sorapointa.proto";

message AbilityControlBlock {
  repeated AbilityEmbryo ability_embryo_list = 1;
}
