syntax = "proto3";

option java_package = "org.sorapointa.proto";

message AvatarPropNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 1227;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  uint64 avatar_guid = 1;
  map<uint32, int64> prop_map = 8;
}
