syntax = "proto3";

import "PlayerDieType.proto";
import "ServerBuff.proto";

option java_package = "org.sorapointa.proto";

message LifeStateChangeNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 1230;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  uint32 move_reliable_seq = 7;
  uint32 entity_id = 8;
  uint32 life_state = 10;
  repeated ServerBuff server_buff_list = 15;
  uint32 source_entity_id = 11;
  PlayerDieType die_type = 4;
  string attack_tag = 13;
}
