syntax = "proto3";

import "Vector.proto";

option java_package = "org.sorapointa.proto";

message VehicleLocationInfo {
  Vector rot = 5;
  uint32 owner_uid = 11;
  repeated uint32 uid_list = 4;
  float cur_hp = 2;
  Vector pos = 9;
  uint32 gadget_id = 1;
  uint32 entity_id = 14;
  float max_hp = 15;
}
